--- a/index.html
+++ b/index.html
@@ -29,8 +29,42 @@
 
     <main>
       <!---visual explanation of process--->
+      <section class="visuals-container">
+        <!---eye exams--->
+        <div class="visual exams">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/paper-icon.png" alt="paper icon">
+          <p>Comprehensive Exams</p>
+        </div>
+
+        <!---glasses fittings--->
+        <div class="visual fittings">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/ruler-icon.png" alt="ruler icon">
+          <p>Custom Fittings</p>
+        </div>
+
+        <!---delivery--->
+        <div class="visual delivery">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/truck-icon.png" alt="truck icon">
+          <p>Fast Delivery</p>
+        </div>
+      </section>
 
       <!---other pertinent information--->
+      <section class="info">
+        <div class="philosophy">
+          <div class="heading">
+            <span>PHILOSOPHY</span>
+          </div>
+          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
+        </div>
+
+        <div class="appointments">
+          <div class="heading">
+            <span>APPOINTMENTS</span>
+          </div>
+          <p>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
+        </div>
+      </section>
         <!---company values--->
         <!---schedule appointments---->
     </main>
