--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         </nav>
       </div>
 
-      <div class="slogan">
-        <span>DON'T JUST LOOK, SEE.</span>
+
+      <div class="slogan-container">
+        <div class="slogan">
+          <span>DON'T JUST LOOK, SEE.</span>
+        </div>
       </div>
     </header>
 
@@ -50,31 +53,34 @@
       </section>
 
       <!---other pertinent information--->
-      <section class="info">
-        <div class="philosophy">
-          <div class="heading">
-            <span>PHILOSOPHY</span>
+      <section class="info-container">
+        <div class="info">
+          <!---company values--->
+          <div class="philosophy">
+            <div class="heading">
+              <span>PHILOSOPHY</span>
+            </div>
+            <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
           </div>
-          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That's why we offer eye exams, custom fittings, and quick delivery at a low cost. It's your vision that makes ours.</p>
-        </div>
 
-        <div class="appointments">
-          <div class="heading">
-            <span>APPOINTMENTS</span>
+          <!---schedule appointments---->
+          <div class="appointments">
+            <div class="heading">
+              <span>APPOINTMENTS</span>
+            </div>
+            <p>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
           </div>
-          <p>Schedule an appointment by calling us at (312) 654-0987. We're open Tuesday - Saturday, 9AM - 6PM.</p>
         </div>
       </section>
-        <!---company values--->
-        <!---schedule appointments---->
     </main>
 
-    <footer class="footer-container">
-      <div class="footer-content">
+    <div class="footer-container">
+      <footer class="logo-name">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-5/tortoiseshell-optics/resources/images/logo-black.png" alt="eyeglass logo in black">
         <span>Copyright Tortoiseshell Optics</span>
-      </div>
-    </footer>
+      </footer>
+    </div>
+
 
   </body>
 </html>
