First draft of styling for different screen sizes.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
           <span>Products</span>
           <span>Contact</span>
         </nav>
+
+        <div class="menu">
+          <span>Menu</span>
+        </div>
       </div>
 
 
